# kiro-lang

./: .gitignore  404.html  Cargo.toml  README.md  build.rs  extension.html  index.html  kiro-runtime.md  kiro-vscode-extension.md  kiro_host_modules.md  kiro_out.rs  main.kiro  math.kiro  package.json  pnpm-lock.yaml  svelte.config.js  tutorial.html
_app/: version.json
internal/: version.json
kiro-vscode/kiro/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
kiro_build_cache/: Cargo.toml
kiro_build_cache/src/: main.rs
kiro_runtime/: Cargo.toml
kiro_runtime/src/: lib.rs
learn-kiro/chapter-01/: 01_basics.kiro  01_basics.md
learn-kiro/chapter-03/: 03_functions.md  (+2 more)
src/: app.css  build_manager.rs  compiler.rs  interpreter.rs  lib.rs  main.rs
tests/: main.kiro  test.kiro  verify_assign.kiro  verify_docs.kiro  verify_error.kiro  verify_generics.kiro  verify_move.kiro  verify_move_fail.kiro  verify_move_immut_fail.kiro  verify_move_pure_fail.kiro  verify_multi_error.kiro  verify_pure.kiro  verify_pure_fail.kiro  verify_pure_strict.kiro  verify_pure_sync.kiro  verify_pure_sync.rs  verify_rust_fn.kiro  verify_rust_fn_call.kiro  verify_std_env.kiro  verify_std_fs.kiro  verify_std_net.kiro  verify_std_time.kiro  verify_types.kiro  verify_void.kiro
tree-sitter/: CMakeLists.txt  Makefile  grammar.js  package.json  tree-sitter.json
tutorial/: chapter-00.html  chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html  chapter-08.html  chapter-09.html  chapter-10.html  final-project.html
(+103 files in other folders)
