[package]
name = "kiro-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
clap = { version = "4.5.54", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["gzip", "json"] }
rust-embed = "8.11.0"
rust-sitter = { version = "0.4.5", default-features = false, features = ["tree-sitter-standard"] }
tokio = { version = "1.49.0", features = ["macros", "sync", "rt-multi-thread", "fs", "time"] }
toml_edit = "0.24.0"
tree-sitter = "0.25.2"

[build-dependencies]
rust-sitter-tool = "0.4.5"
